<resources>
    <string name="app_name">AppyNews</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Configuración</string>
    <string name="action_configuracion">Configuración</string>
    <string name="email">oscar.rodriguezbrea@gmail.com</string>

    <string name="section_comunicacion">Contacto</string>
    <string name="action_enviar">Enviar</string>
    <string name="action_compartir">Compartir</string>

    <string name="action_meneame">Menéame</string>
    <string name="action_elotroladodelmal">El otro lado del mal</string>
    <string name="action_seguridadapple">Seguridad Apple</string>
    <string name="action_applesfera">Applesfera</string>

    <string name="err_connection_state">Su dispositivo no dispone de conexión a Internet</string>
    <string name="err_permisssion_network_state">Su dispositivo no tiene permiso para comprobar el estado de las conexiones de red</string>
    <string name="enlace_ir_noticia">Ir a noticia</string>
    <string name="title_activity_detalle_noticia">Titulo</string>
    <string name="err_fuentes_datos">Error al obtener las fuentes de datos</string>


    <string name="atencion">Atención</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="pregunta_grabar_noticia_favorita">¿Desea almacenar esta noticia como favorita?</string>
    <string name="noticia_grabada">La noticia ha sido grabada</string>
    <string name="error_grabar_noticia">Se ha producido un error al grabar la noticia como favorita</string>
    <string name="contacto">Contacto</string>
    <string name="configuracion">Configuración</string>
    <string name="favoritos">Favoritas</string>
    <string name="nuevoOrigen">Nuevo origen</string>
    <string name="err_get_fuentes_datos">Se ha producido un error al recuperar las fuentes de datos</string>
    <string name="err_accion_no_implementada">Acción no implementada</string>
    <string name="msg_no_hay_noticias_favoritas">No hay noticias favoritas disponibles. Seleccione en el menú una fuente de datos para visualizar sus noticias</string>
    <string name="err_borrar_noticia">Se ha producido un error al eliminar la noticia</string>
    <string name="nuevo_origen_datos">Nueva fuentes de datos RSS</string>
    <string name="nombre_origen">Nombre:</string>
    <string name="url_origen">Dirección/URL:</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>

    <string name="error_nombre_origen_obligatorio">El nombre de la fuente/orígen de datos es obligatorio</string>
    <string name="error_url_origen_obligatorio">La dirección/url de la fuente/orígen de datos es obligatoria</string>
    <string name="error_url_no_valida">La dirección/url no tiene un formato válido</string>
    <string name="error_grabar_origen_bbdd">Se ha producido un error al dar de alta el orígen de datos</string>
    <string name="mantenimiento_fuentes">Mantenimiento fuente datos</string>
    <string name="err_eliminar_origen_datos">Se ha producido un error al eliminar el/los orígenes de datos seleccionados</string>
    <string name="err_eliminar_origen_dato">Se ha producido un error al eliminar la fuente de datos</string>
    <string name="pregunta_eliminar_fuente_datos">¿Desea eliminar la fuente de datos</string>
    <string name="titulo_edicion_fuente_datos_rss">Edición fuente de datos RSS</string>
    <string name="campo_obligatorio">El campo es obligatorio</string>
    <string name="err_formato_url_origen">La dirección url no tiene un formato correcto</string>
    <string name="err_conexion_url_origen">Error al establecer conexión con la dirección facilitada</string>
    <string name="err_update_origen_rss">Se ha producido un error al actualizar la fuente de datos</string>
    <string name="no_autorizado">No autorizado</string>
    <string name="err_permiso_estado_telefono">AppyNews no puede ejecutarse ya que no dispone de permiso para comprobar el estado del teléfono</string>

    <string name="procesando">Procesando</string>
    <string name="espere">Espere unos segundos...</string>


    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_editar_fuente_datos">Sign in</string>
</resources>
