<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/meneame"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_meneame" />
        <item
            android:id="@+id/elotrolado"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_elotroladodelmal" />
        <item
            android:id="@+id/seguridadapple"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_seguridadapple" />

        <item
            android:id="@+id/expansion"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Expansión" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_settings" />

    </group>
-->

    <item android:title="@string/configuracion">
        <menu>
            <item
                android:id="@+id/favoritos"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/favoritos" />
            <item
                android:id="@+id/nuevo_origen"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/nuevoOrigen" />
        </menu>
    </item>

</menu>
