<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appynew.activities.NuevaFuenteDatosActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
            android:text="@string/nombre_origen"
            android:id="@+id/labelNombreOrigen"
            android:textColor="@android:color/holo_blue_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"

        android:id="@+id/txtNombreOrigen"
        android:layout_below="@+id/labelNombreOrigen"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLargePopupMenu"
        android:text="@string/url_origen"
        android:id="@+id/labelUrlOrigen"
        android:layout_below="@+id/txtNombreOrigen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/holo_blue_dark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUrlOrigen"
        android:inputType="textUri"
        android:layout_below="@+id/labelUrlOrigen"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/txtNombreOrigen"
        android:layout_alignEnd="@+id/txtNombreOrigen"
        android:text="http://" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar"
        android:id="@+id/btnGrabarOrigen"
        android:layout_marginTop="59dp"
        android:background="@android:color/holo_blue_light"
        android:textColor="@color/abc_primary_text_material_dark"
        android:layout_below="@+id/txtUrlOrigen"
        android:layout_toRightOf="@+id/labelNombreOrigen"
        android:layout_toEndOf="@+id/labelNombreOrigen" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancelar"
        android:id="@+id/btnCancelar"
        android:textColor="@color/abc_primary_text_material_dark"
        android:background="@android:color/holo_blue_light"
        android:layout_alignTop="@+id/btnGrabarOrigen"
        android:layout_toRightOf="@+id/btnGrabarOrigen"
        android:layout_toEndOf="@+id/btnGrabarOrigen"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp" />


</RelativeLayout>
